force-app/main/default/objects/Task__c/Task__c.object-meta.xml
<CustomObject>
    <label>Task</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Task Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>