force-app/main/default/objects/Task__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <formula>CreatedBy.Department</formula>
    <label>Domain</label>
    <type>Text</type>
</CustomField>