force-app/main/default/objects/Task__c/fields/Task_Details__c.field-meta.xml
<CustomField>
    <fullName>Task_Details__c</fullName>
    <label>Task Details</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>