force-app/main/default/objects/Task__c/fields/Upload_Document__c.field-meta.xml
<CustomField>
    <fullName>Upload_Document__c</fullName>
    <label>Upload Document</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>