force-app/main/default/objects/Task__c/validationRules/Preventing_Approval_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Preventing_Approval_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND (

     TEXT(PRIORVALUE(Approval_Status__c))= &apos;Approved&apos;,

     TEXT(Approval_Status__c) =&apos;Pending&apos;

)</errorConditionFormula>
    <errorMessage>&quot;The record cannot be submitted for approval again&quot;</errorMessage>
</ValidationRule>