force-app/main/default/objects/Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Task_Name__c</columns>
    <columns>Task_Details__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Upload_Document__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Domain__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>